--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   firebase_core: ^2.25.4
   cloud_firestore: ^4.10.3
   firebase_auth: ^4.17.5
-
+  image_picker: ^0.8.7+4
+  url_launcher: ^6.1.7
+  firebase_storage: ^11.0.16
 
 dev_dependencies:
   flutter_test:
